# test-openmp

./: .gitignore  LICENCE.md  README.md  build.sh  meson.build  meson.options  test-0.cpp  test-1.cpp
src/: test-0.cpp  test-1.cpp  test-2.cpp
